--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@
 @tailwind components;
 @tailwind utilities;
 .active-link {
-    color: #1d4ed8; /* Tailwind's blue-600 */
-    border-bottom: 2px solid #1d4ed8;
+    color: #16a34a; /* Tailwind's blue-600 */
+    border-bottom: 2px solid #16a34a;
     padding-bottom: 4px;
   }
 
